Fix IE mobile layout issue

--- a/sites/all/themes/fj16/sass/_front-page.scss
+++ b/sites/all/themes/fj16/sass/_front-page.scss
@@ -214,7 +214,7 @@ body.front {
 			div#clock {
 				color: #fff;
 				margin: 2.8em auto;
-				width: 35em;
+				width: 35.1em;
 				overflow: hidden;
 				text-align: center;
 				text-transform: uppercase;
